--- a/app/common/directives/pageHeader.tpl.html
+++ b/app/common/directives/pageHeader.tpl.html
@@ -1,25 +1,25 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-        <a class="navbar-brand" ui-sref="events">Welcome from {{appName}} {{userEmail ? ' - ' + userEmail : ''}}</a>
+        <a class="navbar-brand" data-ui-sref="events">Welcome from {{appName}} {{userEmail ? ' - ' + userEmail : ''}}</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item" ng-class="{'active': currentState === 'events' || currentState === 'event-details'}">
-                    <a class="nav-link" ui-sref="events">Events</a>
+                <li class="nav-item" data-ng-class="{'active': currentState === 'events' || currentState === 'event-details'}">
+                    <a class="nav-link" data-ui-sref="events">Events</a>
                 </li>
-                <li class="nav-item" ng-show="userEmail" ng-class="{'active': currentState === 'myEvents'}">
+                <li class="nav-item" data-ng-show="userEmail" data-ng-class="{'active': currentState === 'myEvents'}">
                     <a class="nav-link" ui-sref="myEvents">My Events</a>
                 </li>
-                <li class="nav-item" ng-show="!userEmail" ng-class="{'active': currentState === 'login'}">
+                <li class="nav-item" data-ng-show="!userEmail" data-ng-class="{'active': currentState === 'login'}">
                     <a class="nav-link" ui-sref="login">Login</a>
                 </li>
-                <li class="nav-item" ng-show="!userEmail" ng-class="{'active': currentState === 'register'}">
+                <li class="nav-item" data-ng-show="!userEmail" data-ng-class="{'active': currentState === 'register'}">
                     <a class="nav-link" ui-sref="register">Register</a>
                 </li>
-                <li class="nav-item" ng-show="userEmail">
-                    <a href="javascript:void(0);" class="nav-link" ng-click="onLogoutClicked()">Logout</a>
+                <li class="nav-item" data-ng-show="userEmail">
+                    <a href="javascript:void(0);" class="nav-link" data-ng-click="onLogoutClicked()">Logout</a>
                 </li>
             </ul>
         </div>
