--- a/app/events/eventDetails.tpl.html
+++ b/app/events/eventDetails.tpl.html
@@ -3,7 +3,7 @@
         <div class="form-group row page-title">
             {{title}}
         </div>
-        <div ng-if="!userEmail" class="form-text error-text">Please login to register events</div>
+        <div data-ng-if="!userEmail" class="form-text error-text">Please login to register events</div>
         <div class="form-group row">
             <label class="col-sm-3 col-form-label">Description</label>
             <div class="col-sm-9">
@@ -25,9 +25,9 @@
         <div class="form-group row">
             <div class="col-sm-8"></div>
             <div class="col-sm-4">
-                <button type="button" class="btn btn-dark" ng-click="onBackClicked()">Back</button>
-                <button type="button" class="btn btn-success" ng-if="userEmail" ng-hide="registeredEvents.indexOf(evt.id) > -1" ng-click="onRegisterClicked(evt.id)">Register</button>
-                <button type="button" class="btn btn-danger" ng-if="userEmail" ng-show="registeredEvents.indexOf(evt.id) > -1" ng-click="onDeregisterClicked(evt.id)">Deregister</button>
+                <button type="button" class="btn btn-dark" data-ng-click="onBackClicked()">Back</button>
+                <button type="button" class="btn btn-success" data-ng-if="userEmail" data-ng-hide="registeredEvents.indexOf(evt.id) > -1" data-ng-click="onRegisterClicked(evt.id)">Register</button>
+                <button type="button" class="btn btn-danger" data-ng-if="userEmail" data-ng-show="registeredEvents.indexOf(evt.id) > -1" data-ng-click="onDeregisterClicked(evt.id)">Deregister</button>
             </div>
         </div>
     </form>
